[workspace]

resolver = "2"

members = [
    "powdr",
    "powdr-test",
    "number",
    "parser",
    "cargo-powdr",
    "cli",
    "cli-rs",
    "executor",
    "jit-compiler",
    "riscv",
    "parser-util",
    "pil-analyzer",
    "pipeline",
    "pilopt",
    "plonky3",
    "asm-to-pil",
    "asmopt",
    "backend",
    "ast",
    "analysis",
    "linker",
    "isa-utils",
    "airgen",
    "riscv-executor",
    "riscv-syscalls",
    "schemas",
    "backend-utils",
    "executor-utils",
    "wasm",
]

exclude = ["riscv-runtime"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
homepage = "https://powdr.org"
repository = "https://github.com/powdr-labs/powdr"

[workspace.dependencies]
# workspace crates
powdr = { path = "./powdr", version = "0.1.4" }
powdr-airgen = { path = "./airgen", version = "0.1.4" }
powdr-ast = { path = "./ast", version = "0.1.4" }
powdr-asm-to-pil = { path = "./asm-to-pil", version = "0.1.4" }
powdr-isa-utils = { path = "./isa-utils", version = "0.1.4" }
powdr-analysis = { path = "./analysis", version = "0.1.4" }
powdr-asmopt = { path = "./asmopt", version = "0.1.4" }
powdr-backend = { path = "./backend", version = "0.1.4" }
powdr-backend-utils = { path = "./backend-utils", version = "0.1.4" }
powdr-executor = { path = "./executor", version = "0.1.4" }
powdr-executor-utils = { path = "./executor-utils", version = "0.1.4" }
powdr-importer = { path = "./importer", version = "0.1.4" }
powdr-jit-compiler = { path = "./jit-compiler", version = "0.1.4" }
powdr-linker = { path = "./linker", version = "0.1.4" }
powdr-number = { path = "./number", version = "0.1.4" }
powdr-parser = { path = "./parser", version = "0.1.4" }
powdr-parser-util = { path = "./parser-util", version = "0.1.4" }
powdr-pil-analyzer = { path = "./pil-analyzer", version = "0.1.4" }
powdr-pilopt = { path = "./pilopt", version = "0.1.4" }
powdr-pipeline = { path = "./pipeline", version = "0.1.4" }
powdr-plonky3 = { path = "./plonky3", version = "0.1.4" }
powdr-riscv = { path = "./riscv", version = "0.1.4" }
powdr-riscv-executor = { path = "./riscv-executor", version = "0.1.4" }
powdr-riscv-syscalls = { path = "./riscv-syscalls", version = "0.1.4" }
powdr-schemas = { path = "./schemas", version = "0.1.4" }

[profile.pr-tests]
inherits = "dev"
opt-level = 3
debug = "line-tables-only"
debug-assertions = true
overflow-checks = true
panic = 'unwind'
incremental = true         # This is true because target is cached
codegen-units = 256

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.lints.clippy]
print_stdout = "deny"
uninlined_format_args = "deny"
iter_over_hash_type = "deny"
