[workspace]

resolver = "2"

members = [
  "powdr",
  "number",
  "parser",
  "cargo-powdr",
  "cli",
  "cli-rs",
  "constraint-solver",
  "executor",
  "expression",
  "jit-compiler",
  "riscv",
  "riscv-elf",
  "riscv-types",
  "parser-util",
  "pil-analyzer",
  "pipeline",
  "pilopt",
  "plonky3",
  "asm-to-pil",
  "asmopt",
  "backend",
  "ast",
  "analysis",
  "linker",
  "isa-utils",
  "airgen",
  "riscv-executor",
  "syscalls",
  "schemas",
  "backend-utils",
  "executor-utils",
  "autoprecompiles",
  "openvm",
  "cli-openvm",
]

exclude = ["riscv-runtime"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
homepage = "https://powdr.org"
repository = "https://github.com/powdr-labs/powdr"

[workspace.dependencies]
# workspace crates
powdr = { path = "./powdr", version = "0.1.4" }
powdr-airgen = { path = "./airgen", version = "0.1.4" }
powdr-ast = { path = "./ast", version = "0.1.4" }
powdr-asm-to-pil = { path = "./asm-to-pil", version = "0.1.4" }
powdr-constraint-solver = { path = "./constraint-solver", version = "0.1.4" }
powdr-isa-utils = { path = "./isa-utils", version = "0.1.4" }
powdr-analysis = { path = "./analysis", version = "0.1.4" }
powdr-asmopt = { path = "./asmopt", version = "0.1.4" }
powdr-backend = { path = "./backend", version = "0.1.4" }
powdr-backend-utils = { path = "./backend-utils", version = "0.1.4" }
powdr-executor = { path = "./executor", version = "0.1.4" }
powdr-executor-utils = { path = "./executor-utils", version = "0.1.4" }
powdr-expression = { path = "./expression", version = "0.1.4" }
powdr-importer = { path = "./importer", version = "0.1.4" }
powdr-jit-compiler = { path = "./jit-compiler", version = "0.1.4" }
powdr-linker = { path = "./linker", version = "0.1.4" }
powdr-number = { path = "./number", version = "0.1.4" }
powdr-parser = { path = "./parser", version = "0.1.4" }
powdr-parser-util = { path = "./parser-util", version = "0.1.4" }
powdr-pil-analyzer = { path = "./pil-analyzer", version = "0.1.4" }
powdr-pilopt = { path = "./pilopt", version = "0.1.4" }
powdr-pipeline = { path = "./pipeline", version = "0.1.4" }
powdr-plonky3 = { path = "./plonky3", version = "0.1.4" }
powdr-riscv = { path = "./riscv", version = "0.1.4" }
powdr-riscv-elf = { path = "./riscv-elf", version = "0.1.4" }
powdr-riscv-executor = { path = "./riscv-executor", version = "0.1.4" }
powdr-riscv-types = { path = "./riscv-types", version = "0.1.4" }
powdr-syscalls = { path = "./syscalls", version = "0.1.4" }
powdr-schemas = { path = "./schemas", version = "0.1.4" }
powdr-autoprecompiles = { path = "./autoprecompiles", version = "0.1.4" }
powdr-openvm = { path = "./openvm", version = "0.1.4" }

# openvm
openvm = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-build = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-rv32im-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-rv32im-transpiler = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-rv32im-guest = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36", default-features = false }
openvm-transpiler = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-circuit-derive = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-circuit-primitives = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-circuit-primitives-derive = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-instructions = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-instructions-derive = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-sdk = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36", default-features = false, features = [
  "parallel",
  "jemalloc",
  "nightly-features",
  "bench-metrics",
] }
openvm-ecc-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-ecc-transpiler = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-keccak256-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-keccak256-transpiler = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-sha256-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-sha256-transpiler = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-algebra-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-algebra-transpiler = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-bigint-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-bigint-transpiler = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-pairing-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-pairing-transpiler = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36" }
openvm-native-circuit = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36", default-features = false }
openvm-native-recursion = { git = "https://github.com/powdr-labs/openvm.git", rev = "d730a36", default-features = false }

# stark-backend
openvm-stark-sdk = { git = "https://github.com/powdr-labs/stark-backend.git", rev = "ee4e22b", default-features = false, features = [
  "parallel",
  "jemalloc",
  "nightly-features",
  "bench-metrics",
] }
openvm-stark-backend = { git = "https://github.com/powdr-labs/stark-backend.git", rev = "ee4e22b", default-features = false, features = [
  "parallel",
  "jemalloc",
  "bench-metrics",
] }

[profile.pr-tests]
inherits = "dev"
opt-level = 3
debug = "line-tables-only"
debug-assertions = true
overflow-checks = true
panic = 'unwind'
incremental = true         # This is true because target is cached
codegen-units = 256

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.lints.clippy]
print_stdout = "deny"
uninlined_format_args = "deny"
iter_over_hash_type = "deny"

# Uncomment both patches below for local stark-backend and openvm.
# The local openvm also needs to have stark-backend patched so all types match.
# [patch."https://github.com/powdr-labs/stark-backend.git"]
# openvm-stark-sdk = { path = "../stark-backend/crates/stark-sdk", default-features = false }
# openvm-stark-backend = { path = "../stark-backend/crates/stark-backend", default-features = false }

# [patch."https://github.com/powdr-labs/openvm.git"]
# openvm = { path = "../openvm/crates/toolchain/openvm" }
# openvm-build = { path = "../openvm/crates/toolchain/build" }
# openvm-rv32im-circuit = { path = "../openvm/extensions/rv32im/circuit/" }
# openvm-rv32im-transpiler = { path = "../openvm/extensions/rv32im/transpiler" }
# openvm-rv32im-guest = { path = "../openvm/extensions/rv32im/guest" }
# openvm-transpiler = { path = "../openvm/crates/toolchain/transpiler" }
# openvm-circuit = { path = "../openvm/crates/vm" }
# openvm-circuit-derive = { path = "../openvm/crates/vm/derive" }
# openvm-circuit-primitives = { path = "../openvm/crates/circuits/primitives" }
# openvm-circuit-primitives-derive = { path = "../openvm/crates/circuits/primitives/derive" }
# openvm-instructions = { path = "../openvm/crates/toolchain/instructions" }
# openvm-instructions-derive = { path = "../openvm/crates/toolchain/instructions/derive" }
# openvm-sdk = { path = "../openvm/crates/sdk" }
# openvm-ecc-circuit = { path = "../openvm/extensions/ecc/circuit" }
# openvm-ecc-transpiler = { path = "../openvm/extensions/ecc/transpiler" }
# openvm-keccak256-circuit = { path = "../openvm/extensions/keccak256/circuit" }
# openvm-keccak256-transpiler = { path = "../openvm/extensions/keccak256/transpiler" }
# openvm-sha256-circuit = { path = "../openvm/extensions/sha256/circuit" }
# openvm-sha256-transpiler = { path = "../openvm/extensions/sha256/transpiler" }
# openvm-algebra-circuit = { path = "../openvm/extensions/algebra/circuit" }
# openvm-algebra-transpiler = { path = "../openvm/extensions/algebra/transpiler" }
# openvm-bigint-circuit = { path = "../openvm/extensions/bigint/circuit" }
# openvm-bigint-transpiler = { path = "../openvm/extensions/bigint/transpiler" }
# openvm-pairing-circuit = { path = "../openvm/extensions/pairing/circuit" }
# openvm-pairing-transpiler = { path = "../openvm/extensions/pairing/transpiler" }
# openvm-native-circuit = { path = "../openvm/extensions/native/circuit" }
# openvm-native-recursion = { path = "../openvm/extensions/native/recursion" }
