[package]
name = "powdr-airgen"
description = "powdr AIR generator for asm machines"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-ast.workspace = true
powdr-number.workspace = true
powdr-analysis.workspace = true
log = "0.4.17"
itertools = "0.13"

[dev-dependencies]
powdr-parser.workspace = true
powdr-importer.workspace = true
pretty_assertions = "1.4.0"

[lints.clippy]
uninlined_format_args = "deny"
