[package]
name = "powdr-airgen"
description = "powdr AIR generator for asm machines"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-ast.workspace = true
powdr-number.workspace = true

itertools = "0.13"

[lints]
workspace = true

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458
