[package]
name = "powdr-analysis"
description = "powdr compiler for high level asm machines to a fully analyzed asm machine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-asm-to-pil = { path = "../asm-to-pil" }
powdr-ast = { path = "../ast" }
powdr-number = { path = "../number" }
powdr-parser = { path = "../parser" }

itertools = "^0.10"
log = "0.4.18"

[dev-dependencies]
powdr-importer = { path = "../importer" }
pretty_assertions = "1.3.0"
test-log = "0.2.12"
env_logger = "0.10.0"
