[package]
name = "powdr-analysis"
description = "powdr compiler for high level asm machines to a fully analyzed asm machine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-asm-to-pil.workspace = true
powdr-ast.workspace = true
powdr-autoprecompiles.workspace = true
powdr-number.workspace = true
powdr-parser.workspace = true
powdr-parser-util.workspace = true

itertools = "0.13"
lazy_static = "1.4.0"
log = "0.4.18"

[dev-dependencies]
powdr-importer.workspace = true
pretty_assertions = "1.4.0"
test-log = "0.2.12"
env_logger = "0.10.0"

[package.metadata.cargo-udeps.ignore]
development = ["env_logger"]

[lints]
workspace = true

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458
