[package]
name = "powdr-asm-to-pil"
description = "Transforms dynamic machines into constrained machines"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-ast.workspace = true
powdr-number.workspace = true
powdr-parser.workspace = true
powdr-parser-util.workspace = true

lazy_static = "1.4.0"
log = "0.4.17"
pretty_assertions = "1.4.0"

[dev-dependencies]
powdr-analysis = { path = "../analysis" }
powdr-importer = { path = "../importer" }

[lints.clippy]
uninlined_format_args = "deny"
