[package]
name = "powdr-asm-utils"
description = "powdr utilities for LLVM / RISCV assembly"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
itertools = "0.13"

[lints.clippy]
uninlined_format_args = "deny"
