[package]
name = "asm_to_pil"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
number = { path = "../number" }
itertools = "^0.10"
num-bigint = "0.4.3"
ast = { path = "../ast" }
pretty_assertions = "1.4.0"
parser = { path = "../parser" }

[dev-dependencies]
type_check = { path = "../type_check" }
