[package]
name = "powdr-asmopt"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
powdr-ast.workspace = true
powdr-analysis.workspace = true
powdr-number.workspace = true
powdr-pilopt.workspace = true
powdr-parser.workspace = true

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458
