[package]
name = "powdr-ast"
description = "powdr AST definitions"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
powdr-number.workspace = true
powdr-parser-util.workspace = true

itertools = "0.11.0"
num-traits = "0.2.15"
derive_more = "0.99.17"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
schemars = { version = "0.8.16", features = ["preserve_order"]}
serde_cbor = "0.11.2"
auto_enums = "0.8.5"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints.clippy]
uninlined_format_args = "deny"
