[package]
name = "powdr-autoprecompiles"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
powdr-expression.workspace = true
powdr-number.workspace = true
powdr-constraint-solver.workspace = true

itertools.workspace = true
log = "0.4.18"
num-traits = "0.2.15"
serde = "1.0.218"
serde_cbor = "0.11.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
serde_json = "1.0.140"
rayon = "1.10.0"
strum = { version = "0.27.0", features = ["derive"] }

metrics = "0.23.0"
deepsize2 = "0.1.0"
derive_more = "0.99.17"
derivative = "2.2.0"

[package.metadata.cargo-udeps.ignore]
development = ["env_logger"]

[lints]
workspace = true

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458
