[package]
name = "powdr-autoprecompiles"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
powdr-expression.workspace = true
powdr-number.workspace = true
powdr-constraint-solver.workspace = true

itertools.workspace = true
log.workspace = true
num-traits.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
serde_json.workspace = true
rayon = "1.10.0"
strum = { version = "0.27.0", features = ["derive"] }

metrics.workspace = true
deepsize2 = "0.1.0"
derive_more.workspace = true
derivative.workspace = true

[dev-dependencies]
expect-test = "1.5.1"
flate2 = "1.1.2"
powdr-openvm-bus-interaction-handler.workspace = true
test-log.workspace = true
criterion = { version = "0.4", features = ["html_reports"] }

[package.metadata.cargo-udeps.ignore]
development = ["env_logger"]

[lints]
workspace = true

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458

[[bench]]
name = "optimizer_benchmark"
harness = false
