[package]
name = "aztec"
version = "0.1.0"
authors = ["Maddiaa"]
edition = "2021"

[dependencies]
asm_utils = { path = "../asm_utils" }

# TODO: we probably want to pull in the local version of nargo while i am working on it here

# Include acvm brillig module such that we can serialise and deserialise them
acvm = { git = "https://github.com/noir-lang/noir",  directory = "acvm-repo/acvm" }
base64 = "*"
rand = "0.8.4"

