[package]
name = "powdr-backend-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
powdr-pil-analyzer.workspace = true
powdr-parser.workspace = true
powdr-ast.workspace = true
powdr-number.workspace = true
powdr-executor-utils.workspace = true
log = "0.4.27"
itertools = "0.13.0"

[lib]
bench = false # See https://github.com/bheisler/criterion.rs/issues/458
