[package]
name = "powdr-backend"
description = "powdr backend types and API"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[features]
default = []
halo2 = ["dep:halo2_proofs", "dep:halo2_curves", "dep:snark-verifier", "dep:halo2_solidity_verifier"]
estark-polygon = ["dep:pil-stark-prover"]

[dependencies]
powdr-ast.workspace = true
powdr-number.workspace = true
powdr-pil-analyzer.workspace = true
powdr-executor.workspace = true
powdr-parser-util.workspace = true

starky = { git = "https://github.com/0xEigenLabs/eigen-zkvm.git", rev = "cf405b2e2cecb8567cfd083a55936b71722276d5" }
pil-stark-prover = { git = "https://github.com/powdr-labs/pil-stark-prover.git", rev = "769b1153f3ae2d7cbab4c8acf33865ed13f8a823", optional = true }

# TODO change this once Halo2 releases 0.3.1
#halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0", features = ["circuit-params"] }
halo2_proofs = { git = "https://github.com/powdr-labs/halo2", branch = "make-emit-public-v0.3.0", features = ["circuit-params"], optional = true }
halo2_curves = { version = "0.6.1", package = "halo2curves", optional = true}
# TODO change this once Halo2 releases 0.3.1 and snark-verifier uses it
#snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier", tag = "v2024_01_31" }
snark-verifier = { git = "https://github.com/powdr-labs/snark-verifier", branch = "powdr-halo2", optional = true }
halo2_solidity_verifier = { git = "https://github.com/powdr-labs/halo2-solidity-verifier", branch = "main", features = ["evm"], optional = true }

strum = { version = "0.24.1", features = ["derive"] }
log = "0.4.17"
serde = "1.0"
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0.43"
mktemp = "0.5.0"
num-traits = "0.2.15"
num-integer = "0.1.45"
itertools = "^0.10"
rand = "0.8.5"

[dev-dependencies]
test-log = "0.2.12"
env_logger = "0.10.0"
pretty_assertions = "1.4.0"

[package.metadata.cargo-udeps.ignore]
development = ["env_logger"]

[lints.clippy]
uninlined_format_args = "deny"
